<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    tools:context=".Room_Map">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borders"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="395dp"
                        android:layout_height="900dp"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/table1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="60dp"
                            android:text="@string/_1" />
                        <Button
                            android:id="@+id/table2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="-48dp"
                            android:text="@string/_2" />
                        <Button
                            android:id="@+id/table5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="98dp"
                            android:text="@string/_5" />
                        <Button
                            android:id="@+id/table6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="-48dp"
                            android:text="@string/_6" />
                        <Button
                            android:id="@+id/table9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="98dp"
                            android:text="@string/_9" />
                        <Button
                            android:id="@+id/table10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="-48dp"
                            android:text="@string/_10" />
                        <Button
                            android:id="@+id/table13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="98dp"
                            android:text="@string/_13" />
                        <Button
                            android:id="@+id/table14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="-48dp"
                            android:text="@string/_14" />
                        <Button
                            android:id="@+id/table17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="52dp"
                            android:layout_marginTop="98dp"
                            android:text="@string/_17" />
                        <Button
                            android:id="@+id/table18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="260dp"
                            android:layout_marginTop="-48dp"
                            android:text="@string/_18" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="600dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/table3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:layout_marginTop="-16dp"
                            android:text="@string/_3" />
                        <Button
                            android:id="@+id/table7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="132dp"
                            android:text="@string/_7" />
                        <Button
                            android:id="@+id/table11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="279dp"
                            android:text="@string/_11" />
                        <Button
                            android:id="@+id/table15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="423dp"
                            android:text="@string/_15"/>
                        <Button
                            android:id="@+id/table19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="570dp"
                            android:text="@string/_19" />
                        <Button
                            android:id="@+id/table4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="140dp"
                            android:layout_marginTop="-15dp"
                            android:text="@string/_4" />
                        <Button
                            android:id="@+id/table8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="133dp"
                            android:text="@string/_8" />
                        <Button
                            android:id="@+id/table12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="277dp"
                            android:text="@string/_12" />
                        <Button
                            android:id="@+id/table16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="420dp"
                            android:text="@string/_16"/>
                        <Button
                            android:id="@+id/table20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="568dp"
                            android:text="@string/_20"/>
                        <Button
                            android:id="@+id/bar"
                            android:layout_width="130dp"
                            android:layout_height="200dp"
                            android:layout_marginStart="90dp"
                            android:layout_marginTop="600dp"
                            android:text="@string/bar" />
                        <Button
                            android:id="@+id/bar2"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="680dp"
                            android:layout_marginStart="-320dp"/>
                        <Button
                            android:id="@+id/female_toilet"
                            android:layout_width="40dp"
                            android:layout_height="66.6dp"
                            android:layout_marginStart="77dp"
                            android:layout_marginTop="216dp"
                            android:text="@string/ft"/>
                        <Button
                            android:id="@+id/disability_toilet"
                            android:layout_width="40dp"
                            android:layout_height="66.6dp"
                            android:layout_marginStart="-40dp"
                            android:layout_marginTop="274dp"
                            android:text="@string/dt"/>
                        <Button
                            android:id="@+id/male_toilet"
                            android:layout_width="40dp"
                            android:layout_height="66.6dp"
                            android:layout_marginStart="-40dp"
                            android:layout_marginTop="332dp"
                            android:text="@string/mt"/>
                        <Button
                            android:id="@+id/office"
                            android:layout_width="110dp"
                            android:layout_height="160dp"
                            android:layout_marginStart="-105dp"
                            android:layout_marginTop="-30dp"
                            android:text="@string/office" />
                        <Button
                            android:id="@+id/staffroom"
                            android:layout_width="110dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="72dp"
                            android:layout_marginStart="-110dp"
                            android:text="@string/staffroom" />
                        <Button
                            android:id="@+id/breakroom"
                            android:layout_width="110dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="143dp"
                            android:layout_marginStart="-110dp"
                            android:text="@string/breakroom"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </HorizontalScrollView>
    </LinearLayout>

</FrameLayout>