<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".routeoutput">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/table1"
                            android:text="@string/_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="60dp" />
                        <Button
                            android:id="@+id/table2"
                            android:text="@string/_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="230dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table3"
                            android:text="@string/_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table4"
                            android:text="@string/_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="230dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table5"
                            android:text="@string/_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table6"
                            android:text="@string/_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="230dp"
                            android:layout_marginTop="60dp" />
                        <Button
                            android:id="@+id/table7"
                            android:text="@string/_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table8"
                            android:text="@string/_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="230dp"
                            android:layout_marginTop="40dp" />
                        <Button
                            android:id="@+id/table9"
                            android:text="@string/_9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="50dp" />
                        <Button
                            android:id="@+id/exit"
                            android:text="@string/exit_door"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="200dp"
                            android:layout_marginTop="50dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/table10"
                            android:text="@string/_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="120dp"
                            android:layout_marginTop="-15dp" />
                        <Button
                            android:id="@+id/table11"
                            android:text="@string/_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="160dp" />
                        <Button
                            android:id="@+id/table12"
                            android:text="@string/_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="335dp" />
                        <Button
                            android:id="@+id/table13"
                            android:text="@string/_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="535dp" />
                        <Button
                            android:id="@+id/table14"
                            android:text="@string/_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-90dp"
                            android:layout_marginTop="715dp" />
                        <Button
                            android:id="@+id/bar"
                            android:text="@string/bar"
                            android:layout_width="100dp"
                            android:layout_height="200dp"
                            android:layout_marginStart="250dp"
                            android:layout_marginTop="80dp"/>
                        <Button
                            android:id="@+id/toilet"
                            android:text="@string/toilet"
                            android:layout_width="40dp"
                            android:layout_height="200dp"
                            android:layout_marginStart="-40dp"
                            android:layout_marginTop="250dp"/>
                        <Button
                            android:id="@+id/office"
                            android:text="@string/office"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-120dp"
                            android:layout_marginTop="-70dp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </HorizontalScrollView>
    </LinearLayout>

</FrameLayout>